Tue Aug 10 17:35:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest::parse_uri):
	  rollup leading slashes. [ruby-core:31657]
	  patched by Jamison Wilde
	  NOTE: //authority/path is valid relative URI both RFC2396 and
	  RFC3986. So when give a relative URI-like string to URI lib,
	  users must care leading slashes.

Sat Aug  7 17:40:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb, lib/rbconfig/obsolete.rb: warn obsolete and
	  deprecated Config.

Thu Aug  5 11:55:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c: use _() macro instead of __P(), because the
	  former is provided by ruby's defines.h but the latter is offered
	  by some systems only by chance.  this fixes build failure with VC.

Fri Jul 30 17:51:20 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/-test-/add_suffix/bug.c: typo.

Fri Jul 30 08:51:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): home directory must be absolute.
	  [ruby-core:31537]

Fri Jul 30 08:33:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should check if could find user.
	  [ruby-core:31538]

Fri Jul 30 07:59:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_add_suffix): fixed a bug returning uninitialized
	  value.

Fri Jul 30 07:48:04 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use TK_XINCLUDES on tkConfig.sh when not empty,
	  even if MacOS X Aqua version [ruby-dev:41883].

Fri Jul 30 07:47:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (ext-arch): prune directories start with '-'.
	  backported r28654 from the trunk.

Thu Jul 29 22:43:57 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/ssl.rb (WEBrick::Utils.create_self_signed_cert): wrongly
	  created dummy SSL certificate with version == 3 (no such version) and
	  serial == 0 (must be >0).

Wed Jul 28 19:41:37 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
