@@ -156,14 +156,14 @@ print <<EOS
   CONFIG["topdir"] = File.dirname(__FILE__)
   MAKEFILE_CONFIG = {}
   CONFIG.each{|k,v| MAKEFILE_CONFIG[k] = v.dup}
-  def Config::expand(val, config = CONFIG)
+  def RbConfig::expand(val, config = CONFIG)
     val.gsub!(/\\$\\$|\\$\\(([^()]+)\\)|\\$\\{([^{}]+)\\}/) do |var|
       if !(v = $1 || $2)
 	'$'
       elsif key = config[v = v[/\\A[^:]+(?=(?::(.*?)=(.*))?\\z)/]]
 	pat, sub = $1, $2
 	config[v] = false
-	Config::expand(key, config)
+	RbConfig::expand(key, config)
 	config[v] = key
 	key = key.gsub(/\#{Regexp.quote(pat)}(?=\\s|\\z)/n) {sub} if pat
 	key
@@ -174,7 +174,7 @@ print <<EOS
     val
   end
   CONFIG.each_value do |val|
-    Config::expand(val)
+    RbConfig::expand(val)
   end
 end
 autoload :Config, "rbconfig/obsolete.rb" # compatibility for ruby-1.8.4 and older.
